--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Uni Notes
-description: Notes from the University of Washington
+title: TS Notes
+description: Notes from the Robinson Center's Transition School Program.
 baseurl: "/ts" # the subpath of your site, e.g. /blog
 url: "https://andre-ye.github.io/ts" # the base hostname & protocol for your site, e.g. http://example.com
 
